--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,35 @@
+// utils
+@import "utils/normalize";
+@import "utils/reset";
+@import "utils/vars";
+@import "utils/mixins";
+
+// styles
+@import "blocks/index";
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 body {
-  margin: 0;
+  background-color: $main-bg-color;
+
+  font-family: Poppins, sans-serif;
+  font-weight: 600;
+
+  position: relative;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.page {
+  &__body {
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
 }
